[package]
name = "check-versions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.15", features = ["derive"] }
pretty_env_logger = "0.4"
serde_json = "1.0"
hyper-tls = "0.5"
futures = "0.3"
